--- a/week3/day4/bioPage.css
+++ b/week3/day4/bioPage.css
@@ -8,7 +8,7 @@
 }
 
 div {
-    background-image: url("./logo.jpg");
+    background-image: url("./pictures/logo.jpg");
     height: auto;
     width: auto;
 }
