--- a/week4/day1-flexbox/navBar.css
+++ b/week4/day1-flexbox/navBar.css
@@ -1,17 +1,26 @@
 nav{
     display: flex;
     background-color: lightskyblue;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .nav-bar-item {
-    text-emphasis-color: white;
+    color: white;
+    padding: 10px 5px;
+}
+
+a {
+    color: white;
+    text-decoration: none;
 }
 
 .nav-bar-item:first-child{
-    flex-grow: 6;
+    padding-left: 10px;
 }
 
 .nav-bar-menu {
     display: flex;
-    flex-grow: 4;
+    list-style: none;
+    justify-content: right;
 }
